[tool.poetry]
name = "25-web-hw-5"
version = "0.1.0"
description = ""
authors = ["AndreShiZap <andreshizap@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
asyncio = "^3.4.3"
aiohttp = "^3.10.5"
httpx = "^0.27.2"
websockets = "^13.0.1"
names = "^0.3.0"
aiopath = "^0.7.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
